name:                2048Haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/8Gitbrix/2048Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Ashwin Jeyaseelan, Sang-Kyun Han
maintainer:
copyright:           2017 Ashwin Jeyaseelan, Sang-Kyun Han
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game
  build-depends:       base >= 4.7 && < 5
                     , threepenny-gui
  default-language:    Haskell2010

executable 2048Haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , 2048Haskell
  default-language:    Haskell2010

test-suite 2048Haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , 2048Haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/8Gitbrix/2048Haskell
