name:                2048Haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/8Gitbrix/2048Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Ashwin Jeyaseelan, Sang-Kyun Han
maintainer:
copyright:           2017 Ashwin Jeyaseelan, Sang-Kyun Han
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable 2048Haskell
  hs-source-dirs:      src
  other-modules:       Logic
                     , HumanGame
                     , BotGame 
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers   >= 0.5.7.1 && < 0.5.8
                     , linear       >= 1.20.6 && < 1.21
                     , microlens    >= 0.4.8.0 && < 0.4.9
                     , microlens-th >= 0.4.1.1 && < 0.4.2
                     , random       >= 1.1 && < 2
                     , vty
